# novatel_span_driver

./: README.md
novatel_msgs/: CMakeLists.txt  package.xml
novatel_span_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
novatel_span_driver/launch/: example.launch
novatel_span_driver/scripts/: driver
novatel_span_driver/src/novatel_span_driver/: bridge.py  data.py  diagnostics.py  handlers.py  mapping.py  monitor.py  port.py  publisher.py  translator.py  wheel_velocity.py
