<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>novatel_msgs</name>
  <version>1.1.0</version>
  <description>ROS messages which represent raw Novatel SPAN data.</description>
  <author email="support@novatel.com">NovAtel Support</author>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <maintainer email="icolwell@gsd.uwaterloo.ca">Ian Colwell</maintainer>
  <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>

  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_core</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
