<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>novatel_span_driver</name>
  <version>2.0.1</version>
  <description>Python driver for NovAtel SPAN devices.</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>
  <author email="icolwell@gsd.uwaterloo.ca">Ian Colwell</author>
  <maintainer email="michal.antkiewicz@uwaterloo.ca">Michał Antkiewicz</maintainer>

  <author email="support@novatel.com">NovAtel Support</author>

  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_core</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>novatel_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>python3-pcapy</test_depend>
  <test_depend>python3-impacket</test_depend>
</package>
